Bug 1379857 - Record Rust panics for child process crashes. r=dmajor

Install crash reporter's panic hook in child processes (and also delay the main
process installation until we know crash reporter is enabled).

When collecting child crash annotations, read the Rust panic message if it
exists.

MozReview-Commit-ID: Gfp2E8IHjw8

--HG--
extra : rebase_source : 9e261f399e7c54fc262a1500cf2514ddd1012406